Fixed Navbar mobile menu alignment, other changes

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -32,16 +32,16 @@ nav {
 
 #linkMenu {
     position: absolute;
-    right: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-content: flex-end;
     gap: 20px;
     z-index: 1000;
     width: 100px;
     margin-top: 35px;
     background-color: rgb(var(--background-black));
-    padding: 2px 5px;
+    padding: 2px 15px 2px 5px;
     border: 1px solid white;
     border-radius: 10px;
     filter: drop-shadow(0px 0px 5px white);
@@ -63,11 +63,11 @@ nav {
     #menu {
         display: flex;
         flex-direction: column;
+        align-content: flex-end;
         gap: 20px;
         width: 100px;
     }
     #menuIcon {
-        display: block;
         filter: invert(1);
         height: 5vh;
         cursor: pointer;
