--- a/client/src/views/About/About.module.css
+++ b/client/src/views/About/About.module.css
@@ -3,3 +3,10 @@
     background-color: rgb(var(--background-black));
     height: 100%;
 }
+
+.heroinfo {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    gap: 40px;
+}
